Ingress/ingress-fanout.yaml
apiVersion: networking.k8s.io/v1
kind:       Ingress
metadata:
  name: fanout
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /www
        pathType: Prefix
        backend:
          service:
            name: www
            port:  
              number: 80
      - path: /web
        pathType: Prefix
        backend:
          service: 
            name: web
            port:  
              number: 80
