Ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind:       Ingress
metadata:
  name: hostde
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tls.ix.de
    secretName: meincert
  rules:
  - host: tls.ix.de
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:  
            name: www
            port:
              number: 80
