Ingress/ingress.yaml
# Ab K8s 1.19
apiVersion: networking.k8s.io/v1
kind:       Ingress
metadata:
  name: foo
spec:
  rules:
  - host: YOURNAMESETC.zwerk.org
    DELETETHISLINE
    http:
      paths:
      - path: /
        pathType: Prefix  # ImplementationSpecific Exact
        backend:
          service:  
            name: www
            port:
              number: 80
