Ingress/ingress.yml
apiVersion: extensions/v1beta1
kind:       Ingress
metadata:
  name: lalaal
spec:
  rules:
  - host: YOURNAMESPACE.erkmerk.de
    DELETETHISLINE
    http:
      paths:
      - path: /
        backend:
          serviceName:  www
          servicePort:  80
